--- a/.eslintrc
+++ b/.eslintrc
@@ -4,33 +4,38 @@
   "parserOptions": {
     "sourceType": "module"
   },
-  "extends": [
-    "eslint:recommended",
-  ],
+  "extends": ["eslint:recommended", "prettier"],
+  "plugins": ["prettier"],
   "env": {
     "es6": true,
-    "browser": true,
+    "browser": true
   },
   "globals": {
     "module": true,
     "__dirname": true,
     "require": true,
-    "process": true,
+    "process": true
   },
   "rules": {
+    "prettier/prettier": ["error", {
+      "trailingComma": "all",
+      "singleQuote": true,
+      "semi": true
+    }],
     "no-var": 0,
     "no-unused-vars": 0,
     "no-underscore-dangle": 0,
     "no-inner-declarations": 0,
-    "comma-dangle": 0,
+    "comma-dangle": ["error", "always-multiline"],
     "prefer-arrow-callback": 0,
     "no-console": 0,
     "no-continue": 0,
     "object-shorthand": 0,
+    "quotes": ["error", "single"],
     "no-param-reassign": 0,
     "vars-on-top": 0,
     "func-names": 0,
     "consistent-return": 0,
-    "global-require": 0,
+    "global-require": 0
   }
 }
