--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build:profile": "webpack --progress --profile --json --config assets/build/webpack.config.js",
     "start": "webpack --hide-modules --watch --config assets/build/webpack.config.js",
     "clean": "rimraf dist",
-    "lint:js": "eslint -c .eslintrc assets/scripts assets/build",
+    "lint:js": "eslint assets/scripts",
     "lint:sass": "sass-lint -c .sass-lint.yml -q -v",
     "php7cc": "vendor/bin/php7cc src/ templates/",
     "test": "yarn run lint -s"
@@ -45,8 +45,10 @@
     "cssnano": "^3.10.0",
     "es6-promise": "^4.2.2",
     "eslint": "^4.14.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -57,6 +59,7 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.9",
     "postcss-safe-parser": "^3.0.1",
+    "prettier": "1.9.2",
     "resolve-url-loader": "^2.2.1",
     "rimraf": "^2.6.2",
     "sass-lint": "^1.12.1",
