--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 /dist
-/report
+/.report
 bower_components
 node_modules
 npm-debug.log
