--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "mokuji.js": "^1.3.7",
     "normalize.css": "^7.0.0",
     "nprogress": "^0.2.0",
+    "prism-themes": "^1.0.0",
     "prismjs": "^1.9.0",
     "s-ago": "^1.1.0",
     "vue": "^2.5.13",
