--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kiku",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "author": "hiro <hiro@0218.jp>",
-  "homepage": "http://b.0218.jp/",
+  "homepage": "https://b.0218.jp/",
   "repository": {
     "type": "git",
     "url": "git://github.com/hiro0218/kiku-theme.git"
