--- a/package.json
+++ b/package.json
@@ -83,13 +83,13 @@
     "axios": "^0.17.1",
     "headroom.js": "^0.9.4",
     "intersection-observer": "^0.5.0",
+    "medium-zoom": "^0.3.0",
     "mokuji.js": "^1.4.0",
     "normalize.css": "^7.0.0",
     "nprogress": "^0.2.0",
     "prism-themes": "^1.0.0",
     "prismjs": "^1.9.0",
     "s-ago": "^1.1.0",
-    "vue": "^2.5.13",
-    "zooming": "^1.2.7"
+    "vue": "^2.5.13"
   }
 }
