--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "headroom.js": "^0.9.4",
+    "header-scroll-up": "^0.1.1",
     "intersection-observer": "^0.5.0",
     "medium-zoom": "^0.3.0",
     "mokuji.js": "^1.4.0",
