--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,7 @@
       "semi": true
     }],
     "no-var": 0,
-    "no-unused-vars": 0,
+    "no-unused-vars": ["error", { "args": "none" }],
     "no-underscore-dangle": 0,
     "no-inner-declarations": 0,
     "comma-dangle": ["error", "always-multiline"],
