--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,9 @@
           "ie 11",
           "safari >= 10"
         ]
-      }
+      },
+      "modules": false,
+      "loose": true
     }]
   ],
   "plugins": [
