--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "vue-eslint-parser": "^2.0.2",
     "vue-loader": "^13.7.0",
     "vue-template-compiler": "^2.5.13",
-    "vuex": "^3.0.1",
     "webpack": "^3.10.0",
     "webpack-assets-manifest": "^1.0.0",
     "webpack-bundle-analyzer": "^2.9.2",
@@ -92,6 +91,7 @@
     "prism-themes": "^1.0.0",
     "prismjs": "^1.9.0",
     "s-ago": "^1.1.0",
-    "vue": "^2.5.13"
+    "vue": "^2.5.13",
+    "vuex": "^3.0.1"
   }
 }
