--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "prismjs": "^1.9.0",
     "s-ago": "^1.1.0",
     "vue": "^2.5.13",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persist": "^1.1.0"
   }
 }
