--- a/package.json
+++ b/package.json
@@ -82,8 +82,10 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "axios-cache-adapter": "^2.0.0",
     "header-scroll-up": "^0.1.1",
     "intersection-observer": "^0.5.0",
+    "localforage": "^1.5.6",
     "medium-zoom": "^0.3.0",
     "mokuji.js": "^1.4.0",
     "normalize.css": "^7.0.0",
