--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "rimraf": "^2.6.2",
     "sass-lint": "^1.12.1",
     "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.1",
     "style-loader": "^0.19.1",
     "thread-loader": "^1.1.2",
     "url-loader": "^0.6.2",
