--- a/package.json
+++ b/package.json
@@ -95,6 +95,6 @@
     "s-ago": "^1.2.2",
     "vue": "^2.5.13",
     "vuex": "^3.0.1",
-    "vuex-persist": "^1.1.1"
+    "vuex-persistedstate": "^2.4.2"
   }
 }
