--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "imagemin-mozjpeg": "^7.0.0",
     "imagemin-webpack-plugin": "^1.6.1",
     "import-glob": "^1.5.0",
-    "lodash": "^4.17.4",
+    "lodash-es": "^4.17.4",
     "node-sass": "^4.7.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.0.10",
