--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.1",
     "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.6.2",
     "vue-eslint-parser": "^2.0.2",
     "vue-loader": "^13.7.0",
