--- a/package.json
+++ b/package.json
@@ -95,7 +95,6 @@
     "s-ago": "^1.2.2",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.4.2"
+    "vuex": "^3.0.1"
   }
 }
