--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "axios-cache-adapter": "^2.0.0",
+    "clone-deep": "^3.0.1",
     "header-scroll-up": "^0.1.1",
     "intersection-observer": "^0.5.0",
     "localforage": "^1.5.6",
