--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.9",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "hard-source-webpack-plugin": "^0.5.18",
     "imagemin-mozjpeg": "^7.0.0",
     "imagemin-webpack-plugin": "^2.0.0",
     "import-glob": "^1.5.0",
