--- a/package.json
+++ b/package.json
@@ -85,10 +85,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "axios-cache-adapter": "^2.0.0",
-    "clone-deep": "^3.0.1",
     "header-scroll-up": "^0.1.1",
     "intersection-observer": "^0.5.0",
     "localforage": "^1.5.7",
+    "lodash-es": "^4.17.5",
     "medium-zoom": "^0.3.0",
     "mokuji.js": "^1.4.1",
     "normalize.css": "^8.0.0",
