--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vuejs-uib-pagination": "^1.0.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "yakuhanjp": "^3.0.0"
   }
 }
