--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "sass-loader": "^6.0.7",
     "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.20.3",
+    "svg-inline-loader": "^0.8.0",
     "uglifyjs-webpack-plugin": "^1.2.3",
     "url-loader": "^1.0.1",
     "vue-eslint-parser": "^2.0.3",
