--- a/package.json
+++ b/package.json
@@ -26,7 +26,15 @@
     "format:js": "eslint --fix --ext .js,.vue src/scripts/* src/components/*",
     "format:php": "vendor/bin/phpcbf",
     "php7cc": "vendor/bin/php7cc lib/",
+    "precommit": "lint-staged",
     "test": "yarn run lint -s"
+  },
+  "lint-staged": {
+    "**/*.{js,vue}": [
+      "eslint --fix",
+      "eslint",
+      "git add"
+    ]
   },
   "engines": {
     "node": ">= 7.4.0"
@@ -58,6 +66,8 @@
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "hard-source-webpack-plugin": "^0.6.4",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.0",
     "imagemin-mozjpeg": "^7.0.0",
     "imagemin-webpack-plugin": "^2.1.0",
     "import-glob": "^1.5.0",
