--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "theme"
   ],
   "scripts": {
-    "build": "webpack --progress --config src/build/webpack.config.js",
-    "build:production": "webpack --progress -p --config src/build/webpack.config.js",
+    "build": "webpack --mode development --progress --config src/build/webpack.config.js",
+    "build:production": "webpack --mode production --progress -p --config src/build/webpack.config.js",
     "build:profile": "webpack --progress --profile --json --config src/build/webpack.config.js",
     "start": "webpack --hide-modules --watch --config src/build/webpack.config.js",
     "clean": "rimraf dist",
@@ -37,7 +37,7 @@
     ]
   },
   "engines": {
-    "node": ">= 7.4.0"
+    "node": ">= 8.0.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -62,15 +62,15 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-vue": "^4.4.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "hard-source-webpack-plugin": "^0.6.4",
     "husky": "^0.14.3",
-    "lint-staged": "^7.0.2",
     "imagemin-mozjpeg": "^7.0.0",
     "imagemin-webpack-plugin": "^2.1.1",
     "import-glob": "^1.5.0",
+    "lint-staged": "^7.0.2",
     "node-sass": "^4.8.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.3",
@@ -88,9 +88,10 @@
     "vue-eslint-parser": "^2.0.3",
     "vue-loader": "^14.2.2",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^3.10.0",
-    "webpack-assets-manifest": "^1.0.0",
+    "webpack": "^4.4.1",
+    "webpack-assets-manifest": "^3.0.0",
     "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.0.13",
     "webpack-merge": "^4.1.2",
     "yargs": "^11.0.0"
   },
