--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
+    "svgo": "^1.0.5",
+    "svgo-loader": "^2.1.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "vue-eslint-parser": "^2.0.3",
