--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "lint-staged": "^7.0.5",
     "node-sass": "^4.9.0",
     "postcss-cssnext": "^3.1.0",
+    "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.4",
     "postcss-safe-parser": "^3.0.1",
     "prettier": "1.12.1",
