--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "imagemin-webpack-plugin": "^2.1.1",
     "import-glob": "^1.5.0",
     "lint-staged": "^7.0.5",
+    "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "^4.9.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-flexbugs-fixes": "^3.3.1",
