--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "imagemin-mozjpeg": "^7.0.0",
     "imagemin-webpack-plugin": "^2.1.5",
@@ -92,7 +94,6 @@
     "vue-loader": "^14.2.2",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.8.1",
-    "webpack-assets-manifest": "^3.0.1",
     "webpack-bundle-analyzer": "^2.11.2",
     "webpack-cli": "^2.1.3",
     "webpack-merge": "^4.1.2",
