--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "import-glob": "^1.5.0",
-    "lint-staged": "^7.1.3",
+    "lint-staged": "^7.2.0",
     "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "^4.9.0",
     "postcss-cssnext": "^3.1.0",
@@ -90,7 +90,7 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.12.0",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.0.3",
+    "webpack-cli": "^3.0.4",
     "webpack-merge": "^4.1.2",
     "yargs": "^11.0.0"
   },
@@ -103,7 +103,7 @@
     "mokuji.js": "^1.4.2",
     "normalize.css": "^8.0.0",
     "prism-themes": "^1.0.1",
-    "prismjs": "^1.13.0",
+    "prismjs": "1.13.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuejs-uib-pagination": "^1.0.5",
