--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "css-mqpacker": "^6.0.2",
-    "cssnano": "^3.10.0",
+    "cssnano": "^4.0.0-rc.2",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^2.0.0",
