--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "css-mqpacker": "^6.0.2",
-    "cssnano": "^4.0.0-rc.2",
+    "cssnano": "^4.0.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^2.0.0",
@@ -72,7 +72,7 @@
     "postcss-loader": "^2.1.5",
     "postcss-preset-env": "^5.2.1",
     "postcss-safe-parser": "^3.0.1",
-    "postcss-zindex": "^2.2.0",
+    "postcss-zindex": "^4.0.0",
     "prettier": "1.13.7",
     "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
