--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "prism-themes": "^1.0.1",
     "prismjs": "1.13.0",
     "vue": "^2.5.16",
+    "vue-meta": "^1.5.2",
     "vue-router": "^3.0.1",
     "vuejs-uib-pagination": "^1.0.5",
     "vuex": "^3.0.1",
