--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "axios-cache-adapter": "^2.1.0",
     "fast-copy": "^1.2.2",
     "localforage": "^1.7.1",
+    "lozad": "^1.4.0",
     "medium-zoom": "^0.4.0",
     "mokuji.js": "^1.4.2",
     "normalize.css": "^8.0.0",
